2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* control.man: More semantic markup, less visual one.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* control.man: Fixed formatting errors in the doctools manpage.

2002-02-21  Don Porter <dgp@users.sourceforge.net>

	* control.tcl:
	* pkgIndex.tcl: Bumped to 0.1.1.
	* rswitch.tcl:
	* rswitch.test: removed files from HEAD branch that aren't yet
	ready for release.
	* tclIndex: ran genIndex

2002-02-21  Reinhard Max  <max@suse.de>

	* do.test: Updated do-2.3 to reflect the change of the standard
	"wrong # args:..." message for Tcl 8.4. (Bug #517595)
	
2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* assert.tcl: 
	* do.tcl: Frink run

2002-01-29  Reinhard Max  <max@suse.de>

	* do.test: Changed the performance comparison part at the end to
	  be skipped during "make test".
	
	* RELEASE 0.1: bundled with tcllib 1.2

2002-01-18  Don Porter <dgp@users.sourceforge.net>

	* Bumped back to 0.1, which has never been released yet.

2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 0.2

2002-01-18  Reinhard Max  <max@suse.de>

	* do.tcl: 
	* do.test:
	* control.n: Extended [control::do] to allow ommitting the 2nd and
	3rd argument. Added tests and changed the manpage to reflect this.

2001-11-30  Don Porter <dgp@users.sourceforge.net>

	* control.n: Changed format to match precedent in Tcl's memory.n.

2001-11-27  Don Porter <dgp@users.sourceforge.net>

	* control.n: Added [control::do] to SYNOPSIS.

2001-11-09  Don Porter <dgp@users.sourceforge.net>

	* control.n: Some revisions to [control::do] documentation,
	and added LIMITATIONS section where the [return -code] limitation
	is explained.  Corrections to *roff markup.

2001-11-08  Don Porter <dgp@users.sourceforge.net>

	* ascaller.tcl (ErrorInfoAsCaller): new utility proc that provides
	only ::errorInfo management, leaving return code matters to the caller.