@@ -4,12 +4,12 @@
 #	"control".  It provides commands that govern the flow of
 #	control of a program.
 #
-# RCS: @(#) $Id: control.tcl,v 1.10 2002/02/21 21:20:40 dgp Exp $
+# RCS: @(#) $Id: control.tcl,v 1.11 2003/04/11 19:41:34 andreas_kupries Exp $
 
 package require Tcl 8.2
 
 namespace eval ::control {
-    variable version 0.1.1
+    variable version 0.1.2
     namespace export assert control do no-op rswitch
 
     proc control {command args} {
